

using Khet3.Enums;

namespace KhetV3.Interfaces
{
    public interface IPiece
    {
    }
}